--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,18 @@
 *.elc
-recentf
+
 custom.el
 backup/
 auto-save-list/
 transient/
 elpa/
 .cache/
+eclipse.jdt.ls/
+request/
+workspace/
+
+.DS_Store
+custom.el
+recentf
 .lsp-session-v1
 projectile-bookmarks.eld
 .mc-lists.el
