--- a/.gitmodules
+++ b/.gitmodules
@@ -17,3 +17,6 @@
 [submodule "emacs-application-framework"]
 	url = https://github.com/manateelazycat/emacs-application-framework.git
 	path = plugin/emacs-application-framework
+[submodule "plugin/-f"]
+	path = plugin/-f
+	url = https://github.com/manateelazycat/emacs-application-framework.git
